@@ -76,5 +76,6 @@ subprojects {
 
     tasks.withType<Test> {
         useJUnitPlatform()
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
     }
 }
